--- a/bin/index.html
+++ b/bin/index.html
@@ -16,15 +16,16 @@
 			scale: "noScale",
 			allowFullscreen: "true",
 			allowScriptAccess: "always",
-			bgcolor: "#FFFFFF"
+			bgcolor: "#000000",
+			sAlign:"tl"
 		};
 		var attributes = {
 			id:"CityFly"
 		};
-		swfobject.embedSWF("CityFly.swf", "altContent", "100%", "100%", "9.0.0", "expressInstall.swf", flashvars, params, attributes);
+		swfobject.embedSWF("CityFly.swf", "altContent", "800", "600", "9.0.0", "expressInstall.swf", flashvars, params, attributes);
 	</script>
 	<style>
-		html, body { height:100%; }
+		html, body {  }
 		body { margin:0; }
 	</style>
 </head>
