Committed new textured city demo branch.

--- a/bin/index.html
+++ b/bin/index.html
@@ -16,17 +16,16 @@
 			scale: "noScale",
 			allowFullscreen: "true",
 			allowScriptAccess: "always",
-			bgcolor: "#000000",
-			sAlign:"tl"
+			bgcolor: "#000000"
+			
 		};
 		var attributes = {
 			id:"CityFly"
 		};
-		swfobject.embedSWF("CityFly.swf", "altContent", "800", "600", "9.0.0", "expressInstall.swf", flashvars, params, attributes);
+		swfobject.embedSWF("CityFly.swf", "altContent", "800", "600", "10.0.0", "expressInstall.swf", flashvars, params, attributes);
 	</script>
 	<style>
 		html, body {  }
-		body { margin:0; }
 	</style>
 </head>
 <body>
